Fixed alignment of buttons

--- a/omod/src/main/webapp/resources/styles/drugorders.css
+++ b/omod/src/main/webapp/resources/styles/drugorders.css
@@ -191,6 +191,10 @@ and open the template in the editor.
     margin-bottom: 15px;
 }
 
+#addOrderButton, #discontinueOrder{
+    margin-right: 20px;
+}
+
 .orderRow:hover .existingDrugOrdersID{
     background: #75b2f0;
     color: white;
